# cs2-jni

./: .gitignore  CMakeLists.txt  README.md
client/: README.md  main.cpp
client/features/: globals.h
engine/: CMakeLists.txt  README.md  main.cpp
engine/features/: cheat.h  globals.h  math.h
engine/features/aimbot/: aimbot.h
engine/features/esp/: esp.h
engine/features/menu/: menu.h
engine/math/: math.h
engine/memory/: memory.h
engine/overlay/: drawing.h  render.h
engine/process/: Entity.h  memory.h  utils.h
engine/protection/basic/: xor.h
engine/test/: CEntity.java  CMemory.java  CTest.java  Main.java
web/: pom.xml
web/src/main/java/com/vsantos1/web/: WebApplication.java  WebConfiguration.java
web/src/main/java/com/vsantos1/web/controller/: HomeController.java  MenuController.java
web/src/main/java/com/vsantos1/web/engine/: CAimbotConfig.java  CEngine.java  CEspConfig.java  CMiscConfig.java
web/src/main/resources/: application.properties
web/src/main/resources/static/css/: style.css
web/src/main/resources/templates/: index.html
web/src/main/resources/templates/views/: menu.html
web/src/test/java/com/vsantos1/web/: WebApplicationTests.java
